# restcommander

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  README.md  SCRIPT.md  TourDockerfile  build.rs  ca-key.pem  remove-yaml-add-help-flag.plan.md  rust-refactor.plan.md
.github/workflows/: check.yaml  check.yml  docker.yaml  release.yml  rust.yml
pkg/debian/: postinst  service
samples/: README.md  banner.txt  config.toml  perl.pl  python.py  sample-description.cfg  script  script-info.yml  self-signed-cert.pem  self-signed-key.pem  shell.sh  test-script-info.yml
samples/advanced/: counter  deployment-manager  key-value-store  task-queue  webhook-simulator
samples/basic/: add-numbers  current-time  echo-json  greet  hello-world
src/: captcha.rs  http.rs  logging.rs  main.rs  mcp.rs  report.rs  settings.rs  utils.rs
src/cmd/: errors.rs  mod.rs  runner.rs  tree.rs
src/samples/: cert.pem  key.pem  mod.rs  perl.pl  python.py  restcommander.toml  shell.sh  test  test.yml
src/www/: index.html  mod.rs  panel.js  style.css
tools/: exit-code-status-code-mapping  install.sh  setup.sh
tools/docker/: configuration.sh  downloader.sh
tools/tour/scripts/: 1.--hello-world.yml  2.--script-information  2.--script-information.yml  3.--passing-parameters  3.--passing-parameters.yml  4.--parameter-types  4.--parameter-types.yml
www/: CONTRIBUTING.md  README.md  api.js  commands.html  commands.js  configuration.js  index.html  index.js  login.html  login.js  mcp.js  styles.css  theme.js  tools.html  utils.js
