[package]
name = "mcpd"
version = "23.9.3"
edition = "2021"
description = "MCP daemon - expose simple scripts as MCP tools and resources"
authors = ["pouriya.jahanbakhsh@gmail.com"]
repository = "https://github.com/pouriya/mcpd"

[workspace.metadata.ci-tools]
application_version = "23.09.03"

[build-dependencies]
md5 = "0.7"

[dependencies]
thiserror = "1.*"
anyhow = "1.*"
# Configuration:
clap = { version = "4.5.53", default-features = false, features = ["std", "error-context", "help", "usage", "derive", "env"] }
# Logging:
tracing = "0.1"
tracing-subscriber = {version = "0.3.22", default-features = false, features = ["fmt", "json"]}
# (S|Des)erialization:
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0" }
serde_urlencoded = "0.7"
# HTTP:
httparse = "1.8"
rustls = "0.21"
rustls-pemfile = "1.0"
http = "0.2"
base64 = "0.13"
# Check file mode:
is_executable = "1.0"
# Hash:
sha2 = "0.10"
hex = "0.4"
# CAPTCHA:
captcha = "0.0.9"
rand = "0.8"
uuid = { version = "1.1", features = ["v4", "fast-rng"] }
# Time:
humantime = "2.1"

bcrypt = "0.17.1"

num-traits = "0.2.*"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true

[package.metadata.deb]
maintainer = "Pouriya Jahanbakhsh pouriya.jahanbakhsh@gmail.com"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/mcpd", "usr/local/bin/", "755"],
    ["samples/config.toml", "etc/mcpd/config.toml.default", "644"],
]
systemd-units = { enable = true }
maintainer-scripts = "pkg/debian/"
